--- a/src/app/features/recetas/pages/recipe-edit-page/recipe-edit-page.component.html
+++ b/src/app/features/recetas/pages/recipe-edit-page/recipe-edit-page.component.html
@@ -41,10 +41,6 @@
         <label for="descripcion" class="block text-sm font-medium text-gray-700">Descripción Corta</label>
         <textarea id="descripcion" formControlName="descripcion" rows="3" class="mt-1 block w-full rounded border-gray-400 shadow-sm"></textarea>
       </div>
-      <!-- <div>
-        <label for="preparacion" class="block text-sm font-medium text-gray-700">Pasos de Preparación</label>
-        <textarea id="preparacion" formControlName="preparacion" rows="8" class="mt-1 block w-full rounded border-gray-400 shadow-sm"></textarea>
-      </div> -->
       <div>
         <label for="preparacion" class="block text-sm font-medium text-gray-700 mb-1">Pasos de Preparación</label>
         <quill-editor
@@ -68,7 +64,7 @@
 
       <div formArrayName="ingredientes">
         <h3 class="text-lg font-medium text-gray-900 mb-4">Ingredientes</h3>
-        @for (ingredienteGroup of ingredientes.controls; track $index) {
+        @for (ingredienteGroup of ingredientes.controls; track ingredienteGroup) {
           <div [formGroupName]="$index" class="grid grid-cols-1 md:grid-cols-10 gap-3 items-start mb-4 p-3 border rounded">
 
             <div class="md:col-span-4 relative">
@@ -86,7 +82,7 @@
                 <ul class="absolute z-10 w-full bg-white border border-gray-300 rounded-md mt-1 max-h-40 overflow-y-auto shadow-lg">
                   @for (ingrediente of ingredientesSugeridos(); track ingrediente.id) {
                     <li
-                      (mousedown)="selectIngrediente(ingrediente, $index)"
+                      (mousedown)="selectIngrediente(ingrediente)"
                       class="px-3 py-2 cursor-pointer hover:bg-sky-100 text-sm">
                       {{ ingrediente.nombre }}
                     </li>
